[FIX] section-title page-break-inside style to avoid bleeding

--- a/pp_sale/static/src/less/so_report_style.less
+++ b/pp_sale/static/src/less/so_report_style.less
@@ -53,6 +53,7 @@
         padding-bottom: 10px;
         padding-left: 10px;
         padding-right: 10px;
+        page-break-inside:avoid;
     }
     > h2 {
         text-transform: uppercase;
